--- a/mystyles.css
+++ b/mystyles.css
@@ -7,7 +7,7 @@
 
 .extra-panel {
     float: left;
-    width: 77%;
+    width: 74%;
     margin-top: 1em;
 }
 .extra-panel .sub {
@@ -36,7 +36,7 @@
     width: 25%;
     padding-top: 30px;
     padding-bottom: 30px;
-    padding-right: 10px;   
+    padding-right: 10px;
     height: 90%;
 }
 
@@ -65,6 +65,7 @@
 
 .subtitle-wrapper .translation {
     color: #c3881c;
+    margin-top: 0.1em;
 }
 
 .subtitlesLayout2 .subtitlesLine {
