--- a/mystyles.css
+++ b/mystyles.css
@@ -5,7 +5,7 @@
 .thdk-video {
     float: left;
     width: 66%;
-    padding: 1em;
+    padding: 1%;
 }
 
 .extra-panel {
@@ -48,7 +48,7 @@
     width: 30%;
     padding-top: 30px;
     padding-bottom: 30px;
-    padding-right: 10px;
+    padding-right: 1%;
     height: 90%;
 }
 
